# ws-demo-poly2

./: .coverage  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start.sh
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  domains.py  health.py  schemas.py  tenant_users.py  tenants.py
app/config/: settings.py
app/core/: __init__.py  auth.py  config.py
app/db/: __init__.py  cosmos.py
app/middleware/: __init__.py  auth_middleware.py  tenant_middleware.py
app/models/: __init__.py  allowed_domain.py  domain.py  role.py  tenant.py  (+2 more)
docs/: api-specification.md  component-design.md
infra/: container-app.bicep
scripts/: README.md  seed_data.py  setup_cosmos_containers.py
tests/: TEST_IMPLEMENTATION_REPORT_FINAL.md  TEST_IMPLEMENTATION_REPORT_TASK06.md  TEST_PLAN_IMPROVEMENT_SUMMARY.md  __init__.py  conftest.py  test_api_domains.py  test_api_tenant_users.py  test_api_tenant_users.py.backup  test_api_tenants.py  test_models_domain.py  test_models_tenant.py  test_models_tenant_user.py  test_permissions.py  test_redis_client.py  test_repositories_domain.py  test_repositories_tenant.py  test_repositories_tenant_user.py  test_schemas_domain.py  test_schemas_tenant.py  test_schemas_tenant_user.py  test_services_auth_client.py  test_services_domain.py  test_services_tenant.py  test_services_tenant_user.py  test_tenant_service.py  test_tenant_user_service.py  test_user_service.py  test_utils_jwt.py  test_validation.py
(+78 files in other folders)
